fix spelling errors

--- a/ExperimentalInterface/interface.html
+++ b/ExperimentalInterface/interface.html
@@ -61,7 +61,7 @@
                  "<option value='Irish English'>Irish English</option>" + 
                  "<option value='Other English'>Other English</option>" + 
               "</select></p>" +
-         "<p>Describe more specifically the regional or cultural dialect which you think best describes our native English: for example 'southern US,' 'Edinburgh (Scotland),' or 'South Bronx (New York City).'" + 
+         "<p>Describe more specifically the regional or cultural dialect which you think best describes your native English: for example 'southern US,' 'Edinburgh (Scotland),' or 'South Bronx (New York City).'" + 
               "<input type='text' id='part_dialect2' name='part_dialect2' style='width:500px; height=2em'>"
     };
     var experience = {
@@ -108,7 +108,7 @@
 
     var instructions = {
        type: jsPsychHtmlButtonResponse, 
-      stimulus: "<p>In this experiment you will hear 100 'fake English' utterances, composed of English-like nonsense words. These utterances were all originally either real English poetry (artistic English) or real English prose (&#8220;normal&#8221; English). The original English has been carefully garbled so that the original meaning is gone, but aspects of the language&#39;s <em>sound</em> remain.</p><p>Some of the utterances you'll hear are short, while others are longer with a short pause in the middle.</p><p> <b>Short example:</b> <audio controls><source src='Stimuli/nonrhyme_24_oneline.mp3' type='audio/mp3'></source></audio></p><p> <b>Long example:</b><audio controls><source src='Stimuli/nonrhyme_2_twolines.mp3' type='audio/mp3'></source></audio></p><p>Your job is to use your intuition as an English speaker to guess which pseudo utterances were originally poetry, and which were prose. You will hear each utterance once then respond by clicking either the 'Prose' or 'Poetry' button; after you click, you'll hear the next utterance. Note that the length of the utterance (short of long) is <em>not</em> related to the prose/poetry question!</p> <p>Feel free to take breaks every 10&#8211;20 utterances, if you need to.</p><p>When you are ready to begin, click the button below!</p>",
+      stimulus: "<p>In this experiment you will hear 100 'fake English' utterances, composed of English-like nonsense words. These utterances were all originally either real English poetry (artistic English) or real English prose (&#8220;normal&#8221; English). The original English has been carefully garbled so that the original meaning is gone, but aspects of the language&#39;s <em>sound</em> remain.</p><p>Some of the utterances you'll hear are short, while others are longer with a short pause in the middle.</p><p> <b>Short example:</b> <audio controls><source src='Stimuli/nonrhyme_24_oneline.mp3' type='audio/mp3'></source></audio></p><p> <b>Long example:</b><audio controls><source src='Stimuli/nonrhyme_2_twolines.mp3' type='audio/mp3'></source></audio></p><p>Your job is to use your intuition as an English speaker to guess which pseudo utterances were originally poetry, and which were prose. You will hear each utterance once then respond by clicking either the 'Prose' or 'Poetry' button; after you click, you'll hear the next utterance. Note that the length of the utterance (short or long) is <em>not</em> related to the prose/poetry question!</p> <p>Feel free to take breaks every 10&#8211;20 utterances, if you need to.</p><p>When you are ready to begin, click the button below!</p>",
       choices: ["I'm ready to start the experiment."]
     };
 
