improved progress bar

--- a/ExperimentalInterface/interface.html
+++ b/ExperimentalInterface/interface.html
@@ -28,14 +28,14 @@
 
     var jsPsych = initJsPsych({
       show_progress_bar: true,
+		auto_update_progress_bar: false,
       preload_audio: audio_filenames,
     });
 
     var consent = {
       type: jsPsychHtmlButtonResponse,
       stimulus:  ' <p><img src="gatechlogo.png" height="60" /> <img src="LabLogo_BlackandWhite.png" height="60" /></p> <p>Thank you for your interest in our research study. This research will help us better understand how artists use the sounds of human language to create art, especially in poetry and song lyrics. This study is intended for native speakers of English of <em>any</em> dialect&#8212;we&#39;re afraid we can&#39;t accept participation from anyone else. If you are a native English speaker, your participation is extremely valuable to us and we thank you for helping out!</p> <p>The study should take approximately 20&#8211;30 minutes to complete. Your participation in this study is always voluntary and you may discontinue your participation at any time.</p> <h4 id="ethics">Ethics:</h4> <p>This study has been reviewed by the Georgia Tech Institutional Review Board, and has been identified as &#8220;Minimal risk research&#8221; (Ethics ID #H22081). The risks of participating in this study are no greater than any casual poetry listening or other normal daily activities.</p> <h4 id="confidentiality">Confidentiality:</h4> <p>We will comply with any applicable laws and regulations regarding confidentiality. Your responses to the study questions will be entirely anonymous and confidential. No personal data will be gathered from you, and your identity will never be associated with your data, published, or disclosed in any way.</p> <p>To make sure that this research is being carried out in the proper way, the Georgia Institute of Technology IRB may review study records. The Office of Human Research Protections may also look at study records. Your anonymous responses may also be shared with other scientists for use in other research.</p> <h4 id="compensation">Compensation:</h4> <p>You will not directly benefit from or be compensated for participating in this study.</p> <h4 id="contacts-and-questions">Contacts and Questions:</h4> <p>For questions, concerns, or complaints about the study, you may contact the Principal Investigator, Dr. Nathaniel Condit-Schultz at: natcs[at]gatech.edu or by telephone (404)-904-1112. If you have any questions about your rights as a research subject, you may contact Ms. Melanie Clark, Georgia Institute of Technology at (404)-894-6942.</p> <hr /> <p>Only adults (18 years or older) who speak English as a native language and who are <em>not</em> located in the EU are eligible to participate in this study. <strong>By clicking below and completing the study you are agreeing to participate.</strong> You do <em>not</em> waive any of your legal rights by agreeing to participate.</p>',
-      choices: ["I agree. Begin the study."],
-
+      choices: ["I agree. Begin the study."]
     };
 
 
@@ -44,7 +44,10 @@
       type: jsPsychSurveyHtmlForm,
       preamble: "Before we begin, please tell us a little about yourself:",
       html: '<p><b>Age</b>: <input type="number" min="18" max="120" id="part_age" name="part_age"/></p>' +
-            '<p><b>Gender</b>: <input type="text" id="part_age" name="part_age"/></p>'
+            '<p><b>Gender</b>: <input type="text" id="part_age" name="part_age"/></p>',
+		on_finish: function() {
+        jsPsych.setProgressBar(.01);
+		}
     };
     var dialect = {
       type: jsPsychSurveyHtmlForm,
@@ -62,7 +65,10 @@
                  "<option value='Other English'>Other English</option>" + 
               "</select></p>" +
          "<p>Describe more specifically the regional or cultural dialect which you think best describes your native English: for example 'southern US,' 'Edinburgh (Scotland),' or 'South Bronx (New York City).'" + 
-              "<input type='text' id='part_dialect2' name='part_dialect2' style='width:500px; height=2em'>"
+              "<input type='text' id='part_dialect2' name='part_dialect2' style='width:500px; height=2em'>",
+		on_finish: function() {
+        jsPsych.setProgressBar(.02);
+		}
     };
     var experience = {
       type: jsPsychSurveyMultiChoice, 
@@ -103,13 +109,18 @@
                    horizontal: true, required:true,
                    name: "Rap W"},
                  ],
-
+		on_finish: function() {
+        jsPsych.setProgressBar(.04);
+		}
     };
 
     var instructions = {
        type: jsPsychHtmlButtonResponse, 
       stimulus: "<p>In this experiment you will hear 100 'fake English' utterances, composed of English-like nonsense words. These utterances were all originally either real English poetry (artistic English) or real English prose (&#8220;normal&#8221; English). The original English has been carefully garbled so that the original meaning is gone, but aspects of the language&#39;s <em>sound</em> remain.</p><p>Some of the utterances you'll hear are short, while others are longer with a short pause in the middle.</p><p> <b>Short example:</b> <audio controls><source src='Stimuli/nonrhyme_24_oneline.mp3' type='audio/mp3'></source></audio></p><p> <b>Long example:</b><audio controls><source src='Stimuli/nonrhyme_2_twolines.mp3' type='audio/mp3'></source></audio></p><p>Your job is to use your intuition as an English speaker to guess which pseudo utterances were originally poetry, and which were prose. You will hear each utterance once then respond by clicking either the 'Prose' or 'Poetry' button; after you click, you'll hear the next utterance. Note that the length of the utterance (short or long) is <em>not</em> related to the prose/poetry question!</p> <p>Feel free to take breaks every 10&#8211;20 utterances, if you need to.</p><p>When you are ready to begin, click the button below!</p>",
-      choices: ["I'm ready to start the experiment."]
+      choices: ["I'm ready to start the experiment."],
+		on_finish: function() {
+        jsPsych.setProgressBar(.05);
+		}
     };
 
 
@@ -381,6 +392,10 @@ console.log(audio_files);
       stimulus: jsPsych.timelineVariable("file"),
 		response_allowed_while_playing: false,
       post_trial_gap: 500,
+ 	   on_finish: function() {
+        var curr_progress_bar_value = jsPsych.getProgressBarCompleted();
+        jsPsych.setProgressBar(curr_progress_bar_value + (1/audio_files.length)*.95);
+    }
     };
 
     var mainblock = {
